src/test/ui/libstd-case-typo/cell.stderr
error[E0412]: cannot find type `cell` in this scope
  --> $DIR/cell.rs:4:18
   |
LL | fn test_cell(_x: cell<()>){}
   |                  ^^^^
   |                  |
   |                  not found in this scope
   |                  help: found a std struct with a similar name: `std::cell::Cell`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
